// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it creates an input element 1`] = `
<div>
  <input
    id=""
    minLength=""
    name=""
    onChange={[Function]}
    placeholder="Enter your text here"
    required={false}
    style={Object {}}
    type="text"
    value=""
  />
  
</div>
`;

exports[`it renders error messages 1`] = `
<div>
  <input
    id=""
    minLength=""
    name=""
    onChange={[Function]}
    placeholder="Enter your text here"
    required={false}
    style={Object {}}
    type="text"
    value=""
  />
  <div
    className="input-error"
  >
     
    This is an error
     
  </div>
</div>
`;
